--- a/index.html
+++ b/index.html
@@ -7,5 +7,37 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <nav class="navigation">
+        <h1 class="logo">Flex<span class="logo black">Site</span></h1>
+        <ul class="nav">
+          <li class="nav__item">
+            <a class="nav__link" href="#home" alt="navHome"> Home</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#services" alt="navServices">Services</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#" alt="navTeam">Team</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#" alt="navPricing">Pricing</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#" alt="navTestimonial">Testimonial</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#" alt="navContact">Contact</a>
+          </li>
+        </ul>
+        <div class="burger">
+          <div class="burger__line"></div>
+          <div class="burger__line"></div>
+          <div class="burger__line"></div>
+        </div>
+      </nav>
+    </header>
+    <script src="./index.js"></script>
+  </body>
 </html>
