Add mixin and utilties

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Document</title>
+    <title>FlexSite</title>
   </head>
   <body>
     <header id="home" class="header">
@@ -48,7 +48,7 @@
         </div>
       </nav>
       <div class="header__text-box">
-        <h1 class="heading">
+        <h1 class="heading mr-btm-medium">
           <span class="heading--main">FlexSite</span>
           <span class="heading--sub">Make you responsive site with us</span>
         </h1>
@@ -60,11 +60,11 @@
       <section id="services" class="section-services">
         <div class="section-services__bg"></div>
         <div class="container">
-          <h2 class="section-services__heading">Our Services</h2>
+          <h2 class="section-services__heading mr-btm-big">Our Services</h2>
           <div class="section-services__boxs">
             <div class="box">
-              <i class="fas fa-pen fa-5x"></i>
-              <h3 class="box__heading">Content writing</h3>
+              <i class="fas fa-pen fa-5x mr-btm-small"></i>
+              <h3 class="box__heading mr-btm-small">Content writing</h3>
               <p class="box__text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Asperiores at quasi odit maiores, maxime dignissimos libero
@@ -73,8 +73,8 @@
               </p>
             </div>
             <div class="box">
-              <i class="fas fa-globe fa-5x"></i>
-              <h3 class="box__heading">Web Development</h3>
+              <i class="fas fa-globe fa-5x mr-btm-small"></i>
+              <h3 class="box__heading mr-btm-small">Web Development</h3>
               <p class="box__text">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia
                 aliquam reiciendis, dicta nesciunt vero veniam totam doloremque
@@ -83,8 +83,8 @@
               </p>
             </div>
             <div class="box">
-              <i class="fas fa-bullhorn fa-5x "></i>
-              <h3 class="box__heading">Digital marketing</h3>
+              <i class="fas fa-bullhorn fa-5x mr-btm-small"></i>
+              <h3 class="box__heading mr-btm-small">Digital marketing</h3>
               <p class="box__text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure
                 doloribus id, magni dolorum obcaecati ipsam nobis explicabo
@@ -98,7 +98,7 @@
 
       <section class="section-team" id="team">
         <div class="container">
-          <h2 class="section-team__heading">Meet our team</h2>
+          <h2 class="section-team__heading mr-btm-big">Meet our team</h2>
           <div class="section-team__boxs">
             <div class="box-team">
               <img
@@ -153,8 +153,8 @@
 
             <div class="slider">
               <div class="slide" id="last">
-                <div class="slide__img slide__img--3"></div>
-                <h2 class="slide__heading">Carlie Mcgill</h2>
+                <div class="slide__img slide__img--3 mr-btm-small"></div>
+                <h2 class="slide__heading mr-btm-small">Carlie Mcgill</h2>
                 <p class="slide__text">
                   Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                   Magnam beatae quasi corporis alias obcaecati, neque a deleniti
@@ -165,8 +165,8 @@
               </div>
 
               <div class="slide">
-                <div class="slide__img slide__img--1"></div>
-                <h2 class="slide__heading">Mylo Gould</h2>
+                <div class="slide__img slide__img--1 mr-btm-small"></div>
+                <h2 class="slide__heading mr-btm-small">Mylo Gould</h2>
                 <p class="slide__text">
                   Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                   Autem inventore eveniet porro quisquam nostrum voluptate ipsum
@@ -175,8 +175,8 @@
               </div>
 
               <div class="slide">
-                <div class="slide__img slide__img--2"></div>
-                <h2 class="slide__heading">Tamika Mclean</h2>
+                <div class="slide__img slide__img--2 mr-btm-small"></div>
+                <h2 class="slide__heading mr-btm-small">Tamika Mclean</h2>
                 <p class="slide__text">
                   Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam
                   in fugiat eum optio sint, amet dolor vero deserunt error
@@ -187,8 +187,8 @@
               </div>
 
               <div class="slide">
-                <div class="slide__img slide__img--3"></div>
-                <h2 class="slide__heading">Carlie Mcgill</h2>
+                <div class="slide__img slide__img--3 mr-btm-small"></div>
+                <h2 class="slide__heading mr-btm-small">Carlie Mcgill</h2>
                 <p class="slide__text">
                   Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                   Magnam beatae quasi corporis alias obcaecati, neque a deleniti
@@ -199,8 +199,8 @@
               </div>
 
               <div class="slide" id="first">
-                <div class="slide__img slide__img--1"></div>
-                <h2 class="slide__heading">Mylo Gould</h2>
+                <div class="slide__img slide__img--1 mr-btm-small"></div>
+                <h2 class="slide__heading mr-btm-small">Mylo Gould</h2>
                 <p class="slide__text">
                   Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                   Autem inventore eveniet porro quisquam nostrum voluptate ipsum
@@ -218,7 +218,7 @@
 
       <section class="section-pricing" id="pricing">
         <div class="container">
-          <h2 class="section-pricing__heading">Pricing</h2>
+          <h2 class="section-pricing__heading mr-btm-big">Pricing</h2>
           <div class="section-pricing__boxs">
             <div class="box-pricing">
               <h3 class="box-pricing__heading">Silver</h3>
