contact form start

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             >
           </li>
           <li class="nav__item">
-            <a class="nav__link" href="#" alt="navPricing">Pricing</a>
+            <a class="nav__link" href="#pricing" alt="navPricing">Pricing</a>
           </li>
           <li class="nav__item">
             <a class="nav__link" href="#" alt="navContact">Contact</a>
@@ -271,6 +271,29 @@
           </div>
         </div>
       </section>
+
+      <div class="section-contact">
+        <div class="container">
+          <h2 class="section-contact__heading mr-btm-big">Contact us</h2>
+          <div class="contact-box">
+            <div class="contact-box__form"><form action="#" class="form">
+              <div class="form__container">
+                  <input name="name" class="form__input form__input-1 mr-btm-small" type="text" placeholder="Name">
+                  <input name="email" class="form__input form__input-1 mr-btm-small" type="text" placeholder="Email">
+                  <input name="subject" class="form__input mr-btm-small" type="text" placeholder="Subject">
+                  <textarea name="message" class="form__input  mr-btm-small" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+                  <a class="btn btn--primary" href="#">Send message</a>
+              </div>
+            </div>
+            </form>
+            <div class="contact-box__info">
+              <h3 class="box__heading">you can find us</h3>
+              <ul><li>Adress</li>
+              <li>Email</li>
+              <li>Phone</li></ul>
+            </div>
+          </div>
+        </div>
     </main>
     <script src="./index.js"></script>
   </body>
