--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="box-team">
               <img
                 class="box-team__img"
-                src="../img/team1.jpg"
+                src="./img/team1.jpg"
                 alt="Joe Doe img"
               />
               <h3 class="box-team__name">Joe Doe</h3>
@@ -119,7 +119,7 @@
             <div class="box-team">
               <img
                 class="box-team__img"
-                src="../img/team2.jpg"
+                src="./img/team2.jpg"
                 alt="Joe Doe img"
               />
               <h3 class="box-team__name">Tiffany Patrick</h3>
@@ -129,7 +129,7 @@
             <div class="box-team">
               <img
                 class="box-team__img"
-                src="../img/team3.jpg"
+                src="./img/team3.jpg"
                 alt="Joe Doe img"
               />
               <h3 class="box-team__name">Sheila Tait</h3>
@@ -139,7 +139,7 @@
             <div class="box-team">
               <img
                 class="box-team__img"
-                src="../img/team4.jpg"
+                src="./img/team4.jpg"
                 alt="Joe Doe img"
               />
               <h3 class="box-team__name">Peter Howell</h3>
