Change nav div to button

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
           <a class="nav__link" href="#contact" alt="navContact">Contact</a>
         </li>
       </ul>
-      <div class="burger">
+      <button class="burger">
         <div class="burger__line"></div>
-      </div>
+      </button>
     </nav>
     <header id="home" class="header">
       <div class="header__text-box">
